--- a/src/backend/notebooks/process_x/leading_type.ipynb
+++ b/src/backend/notebooks/process_x/leading_type.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "14120d5b-87f1-49b3-83ce-88152d370dcd",
    "metadata": {
     "scrolled": true
@@ -12,8 +12,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/grkmr/Projects/ocelescope/src/backend/.venv/lib/python3.10/site-packages/pm4py/objects/ocel/importer/sqlite/variants/ocel20.py:75: UserWarning: There are unsatisfied OCEL 2.0 constraints in the given relational database: ['const_14_primary_key_object_event_map_type_tables', 'const_15_primary_key_object_event_tables', 'const_16_primary_key_event_object_table', 'const_17_primary_key_object_object_table', 'const_18_primary_key_event_type_spec_tables', 'const_19_foreign_key_event', 'const_20_foreign_key_object', 'const_21_foreign_key_event_object', 'const_22_foreign_key_object_object', 'const_23_foreign_key_event_type_specific', 'const_24_foreign_key_object_type_specific']\n",
+      "/home/grkmr/Projects/ocelescope/src/backend/.venv/lib/python3.10/site-packages/pm4py/objects/ocel/importer/sqlite/variants/ocel20.py:75: UserWarning: There are unsatisfied OCEL 2.0 constraints in the given relational database: ['const_23_foreign_key_event_type_specific']\n",
       "  warnings.warn(\"There are unsatisfied OCEL 2.0 constraints in the given relational database: \"+str(unsatisfied))\n",
+      "/home/grkmr/Projects/ocelescope/src/backend/.venv/lib/python3.10/site-packages/pm4py/objects/log/util/dataframe_utils.py:191: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = pandas_utils.dataframe_column_string_to_datetime(df[col], format=timest_format, utc=True)\n",
+      "/home/grkmr/Projects/ocelescope/src/backend/.venv/lib/python3.10/site-packages/pm4py/objects/log/util/dataframe_utils.py:203: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = strpfromiso.fix_dataframe_column(df[col])\n",
+      "/home/grkmr/Projects/ocelescope/src/backend/.venv/lib/python3.10/site-packages/pm4py/objects/ocel/importer/sqlite/variants/ocel20.py:170: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  object_changes[internal_index] = object_changes.index\n",
+      "/home/grkmr/Projects/ocelescope/src/backend/.venv/lib/python3.10/site-packages/pm4py/objects/ocel/util/ocel_consistency.py:92: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].astype(str)\n",
+      "/home/grkmr/Projects/ocelescope/src/backend/.venv/lib/python3.10/site-packages/pm4py/objects/ocel/util/ocel_consistency.py:92: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].astype(str)\n",
       "/home/grkmr/Projects/ocelescope/src/backend/.venv/lib/python3.10/site-packages/pm4py/objects/ocel/util/ocel_consistency.py:92: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -45,8 +75,9 @@
     "import pm4py\n",
     "import pandas as pd\n",
     "import networkx as nx\n",
+    "from itertools import combinations\n",
     "\n",
-    "ocel = pm4py.read_ocel2_sqlite(\"/home/grkmr/Downloads/age_of_empires_ocel2.sqlite\")\n",
+    "ocel = pm4py.read_ocel2_sqlite(\"/home/grkmr/data/ocels/ContainerLogistics.sqlite\")\n",
     "\n",
     "def compute_event_object_graph(ocel: pm4py.OCEL) -> nx.DiGraph:\n",
     "    \"\"\"\n",
@@ -88,67 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "80309e4d-ad3f-402d-a11b-35163660e63c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import combinations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "0ae36997-5156-42bb-a530-14374ed532dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Archery Range',\n",
-       " 'Barracks',\n",
-       " 'Blacksmith',\n",
-       " 'Bombard Tower',\n",
-       " 'Castle',\n",
-       " 'Dock',\n",
-       " 'Donjon',\n",
-       " 'Farm',\n",
-       " 'Feitoria',\n",
-       " 'Fish Trap',\n",
-       " 'Gate',\n",
-       " 'House',\n",
-       " 'Krepost',\n",
-       " 'Lumber Camp',\n",
-       " 'Market',\n",
-       " 'Match',\n",
-       " 'Mill',\n",
-       " 'Mining Camp',\n",
-       " 'Monastery',\n",
-       " 'None',\n",
-       " 'Outpost',\n",
-       " 'Palisade Gate',\n",
-       " 'Player',\n",
-       " 'Session',\n",
-       " 'Siege Workshop',\n",
-       " 'Stable',\n",
-       " 'Town Center',\n",
-       " 'University',\n",
-       " 'Villager',\n",
-       " 'Watch Tower']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pm4py.ocel_get_object_types(ocel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "5faa8d73-cc53-4763-af3e-c84c95758c4f",
    "metadata": {},
    "outputs": [],
@@ -163,15 +134,15 @@
     "\n",
     "    \n",
     "    cases = []\n",
+    "    search_depth = len(pm4py.ocel_get_object_types(ocel))\n",
     "\n",
     "    for object_id in ocel.objects[ocel.objects[ocel.object_type_column] == leading_type][ocel.object_id_column]:\n",
-    "        print(object_id)\n",
     "        relevant_objects = {object_id}\n",
     "        events = set(object_graph.nodes[object_id][ocel.event_id_column])\n",
     "        next_level_objects = list(object_graph.neighbors(object_id))  \n",
     "        visited_object_types = {leading_type: 0}\n",
     "    \n",
-    "        for level in range(1, len(pm4py.ocel_get_object_types(ocel))):\n",
+    "        for level in range(1, search_depth):\n",
     "            to_be_next_level_objects = []\n",
     "    \n",
     "            for current_object_id in next_level_objects:\n",
@@ -184,6 +155,7 @@
     "    \n",
     "                to_be_next_level_objects.extend(object_graph.neighbors(current_object_id))\n",
     "                relevant_objects.add(current_object_id)\n",
+    "                events.update(object_graph.nodes[current_object_id][ocel.event_id_column])\n",
     "                    \n",
     "            next_level_objects = list(set(to_be_next_level_objects)) \n",
     "    \n",
@@ -193,29 +165,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a2169bf4-70e0-48e6-b1fd-967220d98210",
+   "execution_count": 3,
+   "id": "88e91c70-fffd-440c-808f-5ac0ceb4299b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import combinations\n",
-    "from collections import defaultdict\n",
+    "from collections import deque\n",
     "\n",
-    "event_groups = defaultdict(list)\n",
-    "for _, row in ocel.relations[[ocel.event_id_column, ocel.object_id_column]].itertuples(index=False):\n",
-    "    event_groups[row[0]].append(row[1])\n",
+    "def leading_type_process_executions(ocel: pm4py.OCEL, leading_type: str):\n",
+    "    object_id_col = ocel.object_id_column\n",
+    "    event_id_col = ocel.event_id_column\n",
+    "    object_type_col = ocel.object_type_column\n",
     "\n",
-    "# Now generate combinations efficiently\n",
-    "edges = []\n",
-    "for obj_ids in event_groups.values():\n",
-    "    if len(obj_ids) > 1:\n",
-    "        edges.extend(combinations(obj_ids, 2))\n"
+    "    # Build object graph\n",
+    "    relations = ocel.relations\n",
+    "    object_info_df = relations.groupby(object_id_col).agg({event_id_col: list, object_type_col: 'first'})\n",
+    "    object_graph = nx.Graph()\n",
+    "    object_graph.add_nodes_from([\n",
+    "        (idx, {event_id_col: row[event_id_col], object_type_col: row[object_type_col]})\n",
+    "        for idx, row in object_info_df.iterrows()\n",
+    "    ])\n",
+    "\n",
+    "    edges = []\n",
+    "    for _, group in relations.groupby(event_id_col):\n",
+    "        objs = group[object_id_col].values\n",
+    "        if len(objs) >= 2:\n",
+    "            edges.extend(combinations(objs, 2))\n",
+    "    object_graph.add_edges_from(edges)\n",
+    "\n",
+    "    # Prepare for traversal\n",
+    "    cases = []\n",
+    "    all_object_types = pm4py.ocel_get_object_types(ocel)\n",
+    "    max_level = len(all_object_types)\n",
+    "\n",
+    "    leading_objects = ocel.objects[ocel.objects[object_type_col] == leading_type][object_id_col]\n",
+    "\n",
+    "    for object_id in leading_objects:\n",
+    "        events = set(object_graph.nodes[object_id][event_id_col])\n",
+    "        visited_objects = {object_id}\n",
+    "        visited_object_types = {leading_type: 0}\n",
+    "        queue = deque([(object_id, 0)])\n",
+    "\n",
+    "        while queue:\n",
+    "            current_object_id, level = queue.popleft()\n",
+    "            if level >= max_level:\n",
+    "                continue\n",
+    "\n",
+    "            for neighbor in object_graph.neighbors(current_object_id):\n",
+    "                if neighbor in visited_objects:\n",
+    "                    continue\n",
+    "                neighbor_type = object_graph.nodes[neighbor][object_type_col]\n",
+    "                if neighbor_type in visited_object_types and visited_object_types[neighbor_type] != level + 1:\n",
+    "                    continue\n",
+    "\n",
+    "                visited_objects.add(neighbor)\n",
+    "                visited_object_types.setdefault(neighbor_type, level + 1)\n",
+    "                queue.append((neighbor, level + 1))\n",
+    "                events.update(object_graph.nodes[neighbor][event_id_col])\n",
+    "\n",
+    "        cases.append((events, visited_objects))\n",
+    "\n",
+    "    return cases\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "acfd2941-7580-4e3e-9ae1-2b6903190baf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "object_id_col = ocel.object_id_column\n",
+    "event_id_col = ocel.event_id_column\n",
+    "object_type_col = ocel.object_type_column\n",
+    "\n",
+    "test = ocel.relations.groupby(ocel.event_id_column)[[ocel.object_type_column, ocel.object_id_column]].agg({object_type_col:set, object_id_col:list}).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7be6b642-5660-436f-ac51-0b6cf1f0e508",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_object_map = dict(zip(test[event_id_col],zip(test[object_id_col],test[object_type_col])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8862ce80-ec6d-45fd-b5f1-5b9946732724",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Container', 'Customer Order', 'Transport Document', 'Vehicle']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pm4py.ocel_get_object_types(ocel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1637f2d9-56da-4034-9393-da8696accd35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_executions = leading_type_process_executions(ocel,'Customer Order')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a247b3d1-400b-4cac-abde-9db2f55bd1d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'book_vehs_td1',\n",
+       "  'book_vehs_td6',\n",
+       "  'book_vehs_td9',\n",
+       "  'create_td6',\n",
+       "  'depart_vh2',\n",
+       "  'depart_vh4',\n",
+       "  'drive_term_cr1',\n",
+       "  'drive_term_cr21',\n",
+       "  'drive_term_cr22',\n",
+       "  'drive_term_cr23',\n",
+       "  'drive_term_cr24',\n",
+       "  'drive_term_cr33',\n",
+       "  'drive_term_cr4',\n",
+       "  'drive_term_cr5',\n",
+       "  'load_truck_hu128',\n",
+       "  'load_truck_hu129',\n",
+       "  'load_truck_hu13',\n",
+       "  'load_truck_hu130',\n",
+       "  'load_truck_hu131',\n",
+       "  'load_truck_hu132',\n",
+       "  'load_truck_hu133',\n",
+       "  'load_truck_hu14',\n",
+       "  'load_truck_hu140',\n",
+       "  'load_truck_hu141',\n",
+       "  'load_truck_hu142',\n",
+       "  'load_truck_hu143',\n",
+       "  'load_truck_hu144',\n",
+       "  'load_truck_hu145',\n",
+       "  'load_truck_hu15',\n",
+       "  'load_truck_hu16',\n",
+       "  'load_truck_hu17',\n",
+       "  'load_truck_hu18',\n",
+       "  'load_truck_hu56',\n",
+       "  'load_truck_hu57',\n",
+       "  'load_truck_hu58',\n",
+       "  'load_truck_hu59',\n",
+       "  'load_truck_hu60',\n",
+       "  'load_truck_hu61',\n",
+       "  'load_truck_hu62',\n",
+       "  'load_truck_hu63',\n",
+       "  'load_truck_hu64',\n",
+       "  'load_truck_hu65',\n",
+       "  'load_truck_hu66',\n",
+       "  'load_truck_hu67',\n",
+       "  'load_truck_hu68',\n",
+       "  'load_truck_hu69',\n",
+       "  'load_truck_hu70',\n",
+       "  'load_truck_hu71',\n",
+       "  'load_truck_hu72',\n",
+       "  'load_truck_hu73',\n",
+       "  'load_truck_hu74',\n",
+       "  'load_truck_hu75',\n",
+       "  'load_truck_hu76',\n",
+       "  'load_veh_cr1',\n",
+       "  'load_veh_cr21',\n",
+       "  'load_veh_cr22',\n",
+       "  'load_veh_cr23',\n",
+       "  'load_veh_cr24',\n",
+       "  'load_veh_cr33',\n",
+       "  'load_veh_cr4',\n",
+       "  'load_veh_cr5',\n",
+       "  'order_crs_td1',\n",
+       "  'order_crs_td6',\n",
+       "  'order_crs_td9',\n",
+       "  'pick_cr1',\n",
+       "  'pick_cr21',\n",
+       "  'pick_cr22',\n",
+       "  'pick_cr23',\n",
+       "  'pick_cr24',\n",
+       "  'pick_cr33',\n",
+       "  'pick_cr4',\n",
+       "  'pick_cr5',\n",
+       "  'reg_co1',\n",
+       "  'stock_cr1',\n",
+       "  'stock_cr21',\n",
+       "  'stock_cr22',\n",
+       "  'stock_cr23',\n",
+       "  'stock_cr24',\n",
+       "  'stock_cr33',\n",
+       "  'stock_cr4',\n",
+       "  'stock_cr5',\n",
+       "  'to_bay_cr1',\n",
+       "  'to_bay_cr21',\n",
+       "  'to_bay_cr22',\n",
+       "  'to_bay_cr23',\n",
+       "  'to_bay_cr24',\n",
+       "  'to_bay_cr33',\n",
+       "  'to_bay_cr4',\n",
+       "  'to_bay_cr5',\n",
+       "  'weigh_cr1',\n",
+       "  'weigh_cr21',\n",
+       "  'weigh_cr22',\n",
+       "  'weigh_cr23',\n",
+       "  'weigh_cr24',\n",
+       "  'weigh_cr33',\n",
+       "  'weigh_cr4',\n",
+       "  'weigh_cr5'},\n",
+       " {'co1',\n",
+       "  'cr1',\n",
+       "  'cr21',\n",
+       "  'cr22',\n",
+       "  'cr23',\n",
+       "  'cr24',\n",
+       "  'cr33',\n",
+       "  'cr4',\n",
+       "  'cr5',\n",
+       "  'td6',\n",
+       "  'vh2',\n",
+       "  'vh4'})"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "process_executions[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7111312b-ce2c-467e-936b-2a067ae7faf3",
+   "id": "7cd13b9b-1285-4b4f-96ec-53bd09eb2e2b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -237,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
