--- a/src/backend/notebooks/filters/Attributes.ipynb
+++ b/src/backend/notebooks/filters/Attributes.ipynb
@@ -15,7 +15,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "b322e3d2-06f9-4e76-b944-21fdb67fad56",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "from typing import List, Literal, Union\n",
@@ -215,7 +219,9 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "2ef4ee92-002a-46da-aeda-beca3718a025",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
